--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,5 @@
 {"version_code":451209,"content":"
-<p>تحديث 1.00</p>
+<p>إصدار 1.10</p>
 
 <li> التحديث لنسخة الماركت 2.18.327</li>
 <li> تفعيل ميزة الملصقات يمكنك الآن تنزيل الملصقات المعبرة واستخدامها في الدردشات</li>
